# openfsm

./: .gitignore  CMakeLists.txt  CmakeLists.txt  Makefile  README.md  README_cn.md
src/: openfsm.cpp  openfsm.h
test/: test.cpp
